[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = 
    py39
    py310
    py311
    py312
    py313

[testenv]
commands = python -m unittest discover
whitelist_externals = python

"""
