[metadata]
name = zabbix-enums
version = 1.62.0
author = Robert Szulist
author_email = r.szulist@gmail.com
description = An Enum collection for Zabbix API scripting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/szuro/zabbix-enums
project_urls =
    Bug Tracker = https://github.com/szuro/zabbix-enums/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
